Cleanup duplicate code from Makefile
git-svn-id: svn+ssh://svn.code.sf.net/p/openlcb/svn/trunk@4138 87536cb5-86f1-4cdc-8fc6-3f0f71bcd267

--- a/specs/lcc/Makefile
+++ b/specs/lcc/Makefile
@@ -88,7 +88,7 @@ DOCU_call=$(call DOCU_template,$(1)-$(2)$(if $(filter $(5),Draft),-Draft,),$(2),
 #  $(3) is the output date (example 2016-02-08)
 #  $(4) is "Adopted" (default if empty), or "Draft"
 
-DOCU_stn=$(call DOCU_template,$(1)-S$(if $(filter $(4),Draft),-Draft,),S,$(2)S-$(3).pdf,S-$(1)-$(2)-$(3)$(if $(filter $(4),Draft),-Draft,).pdf,$(1),$(4)) $(call DOCU_template,$(1)-TN$(if $(filter $(4),Draft),-Draft,),TN,$(2)TN-$(3).pdf,TN-$(1)-$(2)-$(3)$(if $(filter $(4),Draft),-Draft,).pdf,$(1),$(4))
+DOCU_stn=$(call DOCU_call,$(1),S,$(2),$(3),$(4))  $(call DOCU_call,$(1),TN,$(2),$(3),$(4))
 
 $(eval $(call DOCU_call,9.7.0.1,TN,Glossary,2016-02-06))
 $(eval $(call DOCU_call,9.7.0.2,TN,CommonInformation,2015-02-17))
