fixed RUNNING variable for detecting OpenOffice already running
git-svn-id: svn+ssh://svn.code.sf.net/p/openlcb/svn/trunk@4140 87536cb5-86f1-4cdc-8fc6-3f0f71bcd267

--- a/specs/lcc/Makefile
+++ b/specs/lcc/Makefile
@@ -1,4 +1,4 @@
-BRUNNING := $(shell ps ax | grep -v grep | grep soffice)
+RUNNING := $(shell ps ax | grep -v grep | grep soffice)
 
 OFFICE := $(shell sh -c \
             "if [ -d /Applications/LibreOffice.app/Contents/MacOS ]; then echo /Applications/LibreOffice.app/Contents/MacOS/soffice; \
