Add rule to convert files to txt.
git-svn-id: svn+ssh://svn.code.sf.net/p/openlcb/svn/trunk@4214 87536cb5-86f1-4cdc-8fc6-3f0f71bcd267

--- a/specs/Makefile
+++ b/specs/Makefile
@@ -43,7 +43,7 @@ nmra: \
 pdf: $(OUTPUT)
 
 .SUFFIXES:
-.SUFFIXES: .odt .ods .pdf
+.SUFFIXES: .odt .ods .pdf .txt
 
 # Spreadsheets
 .ods.pdf:
@@ -52,6 +52,9 @@ pdf: $(OUTPUT)
 # text documents
 .odt.pdf:
 	$(OFFICE) --headless --convert-to pdf $<
+
+.odt.txt:
+	odt2txt $< > $@
 
 .PHONY: veryclean
 veryclean: clean
