Makefile updated for this cycle

--- a/standards/lcc/Makefile
+++ b/standards/lcc/Makefile
@@ -89,22 +89,25 @@ DOCU_stn=$(call DOCU_call,$(1),S,$(2),$(3),$(4))  $(call DOCU_call,$(1),TN,$(2),
 
 $(eval $(call DOCU_call,9.7.0.1,TN,Glossary,2021-04-25))
 $(eval $(call DOCU_call,9.7.0.2,TN,CommonInformation,2021-04-25))
-$(eval $(call DOCU_stn,9.7.0.3,UniqueIdentifiers,2021-04-25))
-$(eval $(call DOCU_stn,9.7.0.4,EventIdentifiers,2021-04-25))
-$(eval $(call DOCU_stn,9.7.1.1,CanPhysical,2021-04-25))
-$(eval $(call DOCU_stn,9.7.1.1,CanPhysical,2021-05-01,Draft))
+$(eval $(call DOCU_stn,9.7.0.3,UniqueIdentifiers,2024-07-22))
+$(eval $(call DOCU_stn,9.7.0.4,EventIdentifiers,2024-07-22))
+$(eval $(call DOCU_stn,9.7.1.1,CanPhysical,2024-07-22))
 #$(eval $(call DOCU_stn,9.7.1.2,TcpPhysical)) does not exist yet
-$(eval $(call DOCU_stn,9.7.2.1,CanFrameTransfer,2021-04-25))
+$(eval $(call DOCU_stn,9.7.2.1,CanFrameTransfer,2024-07-22))
 #$(eval $(call DOCU_stn,9.7.2.2,TcpTransfer)) does not exist yet
-$(eval $(call DOCU_stn,9.7.3.1,EventTransport,2021-04-25))
+$(eval $(call DOCU_stn,9.7.3.1,EventTransport,2024-07-22))
 $(eval $(call DOCU_stn,9.7.3.2,DatagramTransport,2021-04-25))
 #$(eval $(call DOCU_stn,9.7.3.3,StreamTransport)) does not exist yet
-$(eval $(call DOCU_stn,9.7.3,MessageNetwork,2021-04-25))
+$(eval $(call DOCU_stn,9.7.3,MessageNetwork,2024-07-22))
 
-$(eval $(call DOCU_stn,9.7.4.1,ConfigurationDescriptionInformation,2021-04-25))
-$(eval $(call DOCU_stn,9.7.4.2,MemoryConfiguration,2021-04-25))
-$(eval $(call DOCU_stn,9.7.4.3,SimpleNodeInformation,2021-04-25))
+$(eval $(call DOCU_stn,9.7.4.1,ConfigurationDescriptionInformation,2024-07-22))
+$(eval $(call DOCU_stn,9.7.4.2,MemoryConfiguration,2024-07-22))
+$(eval $(call DOCU_stn,9.7.4.3,SimpleNodeInformation,2024-07-22))
 $(eval $(call DOCU_stn,9.7.4.4,FirmwareUpgrade,2021-04-25))
 $(eval $(call DOCU_stn,9.7.4.5,BroadcastTime,2021-04-25))
+
+$(eval $(call DOCU_stn,9.7.4.6,TrainControl,2024-07-22))
+$(eval $(call DOCU_stn,9.7.4.7,TrainSearch,2024-07-22))
+$(eval $(call DOCU_stn,9.7.4.8,FunctionDescriptionInformation,2024-07-22))
 
 
